# Huffman_Coding

./: .gitignore  README.md  RUN.md
HUFFMAN_TREE/: Cargo.toml  output.txt  output2.ppm  output2.txt  test.txt
HUFFMAN_TREE/src/: main.rs
HUFFMAN_TREE/src/bfile/: bfile.rs  mod.rs
HUFFMAN_TREE/src/coder/: coder.rs  mod.rs
HUFFMAN_TREE/src/encoder/: encoder.rs
HUFFMAN_TREE/src/huffmantree/: frequency.rs  huffmantree.rs  mod.rs  ptr_huffmantree.rs  ptr_treenode.rs  treenode.rs  vec_node.rs  vec_tree.rs
HUFFMAN_TREE/src/mapreduce/: mapreduce.rs
HUFFMAN_TREE/src/ppm/: mod.rs  ppm.rs
huffman/: Cargo.toml  huff.crab  huffmantree.crab  output.txt  test.txt
huffman/src/: main.rs
huffman/src/bfile/: bfile.rs
huffman/src/coder/: coder.rs
huffman/src/huffmantree/: frequency.rs  huffmantree.rs
huffman/src/mapreduce/: mapreduce.rs
huffman/src/ppm/: ppm.rs
